# IUM-Fijalkowski-Niewiarowski

./: LICENSE  Makefile  README.md  etap1-dane-v2.md  etap1.1.md  etap1.md  etap2-model.md  pyproject.toml  requirements.txt
api/: ab_test.py  app.py  feature_importance.py
base_model/: base_model_test.py  globals.py
dane/v1/: artists.jsonl  prepared_data.jsonl  sessions.jsonl  users.jsonl
data_analize_scripts/: data_analizer.py  data_ploter.py
data_analize_scripts/dane/v1/: extended_users.jsonl  sessions_with_skip_like_and_duration_info.jsonl  updated_sessions.jsonl
data_analize_scripts/scripts/: merge_session_data.py
data_analize_scripts/scripts/v1/: extend_user_data.py  session_skip.py
data_analize_scripts/scripts/v2/: corelation.py  extend_user_data_opt.py  session_skip_opt.py
docs/: mkdocs.yml
docs/docs/: index.md
ium_fij_niew/: globals.py  utils.py
ium_fij_niew/base_model/: base_model_test.py
ium_fij_niew/model_usage/: data.py  model_classes.py
ium_fij_niew/normal_model/: create_model.py  data_evaluate.py  data_parser.py
models/: linear_svc  linear_svc_2025-01-03_15-17-26  linear_svc_2025-01-03_16-17-03  linear_svc_2025-01-03_16-32-37  model.py  model_v1.py  random_forest_2025-01-03_13-18-30  random_forest_2025-01-03_13-25-05  random_forest_2025-01-03_13-27-31
models/v1/: gradient_boosting_regressor.pkl  gradient_boosting_regressor_undersampling.pkl
notebooks/: model.py  model2.py  model_v1.py
reports/scripts/: ab_test_analyst.py  data_analizer.py  data_ploter.py  data_plotr_v2.py  percentage_histogram.py  session_skip.py
